--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,186 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@layer base {
+    .container {
+        @apply max-w-[1330px] lg:max-w-[1023px] md:max-w-[767px] sm:max-w-[359px];
+    }
 
-@media (prefers-color-scheme: dark) {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        @apply text-slate-900;
+    }
+
+    h1 {
+        @apply text-[48px] font-bold;
+    }
+
+    h2 {
+        @apply text-[30px] font-medium;
+    }
+
+
+    h3 {
+        @apply text-[24px] font-medium;
+    }
+
+    h4 {
+        @apply text-[20px] font-medium;
+    }
+
+    h5 {
+        @apply text-[18px] font-medium;
+    }
+
+    h6 {
+        @apply text-[16px];
+    }
+
+    p {
+        @apply text-[16px] text-slate-900;
+    }
+
+    ul > li {
+        @apply text-sm text-slate-900;
+    }
+
+    code {
+        @apply bg-slate-100 p-[4px] text-sm font-bold text-slate-900;
+    }
+
+    big {
+        @apply text-lg text-slate-900;
+    }
+
+    small {
+        @apply text-sm;
+    }
+
+    sub {
+        @apply bottom-0 text-sm text-slate-500;
+    }
+
+    #__next {
+        @apply h-screen;
+    }
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+
+        /*--background: 0 0% 100%;*/
+
+        /*--foreground: 222.2 84% 4.9%;*/
+
+        /*--card: 0 0% 100%;*/
+
+        /*--card-foreground: 222.2 84% 4.9%;*/
+
+        /*--popover: 0 0% 100%;*/
+
+        /*--popover-foreground: 222.2 84% 4.9%;*/
+
+        /*--primary: 222.2 47.4% 11.2%;*/
+
+        /*--primary-foreground: 210 40% 98%;*/
+
+        /*--secondary: 210 40% 96.1%;*/
+
+        /*--secondary-foreground: 222.2 47.4% 11.2%;*/
+
+        /*--muted: 210 40% 96.1%;*/
+
+        /*--muted-foreground: 215.4 16.3% 46.9%;*/
+
+        /*--accent: 210 40% 96.1%;*/
+
+        /*--accent-foreground: 222.2 47.4% 11.2%;*/
+
+        /*--destructive: 0 84.2% 60.2%;*/
+
+        /*--destructive-foreground: 210 40% 98%;*/
+
+        /*--border: 214.3 31.8% 91.4%;*/
+
+        /*--input: 214.3 31.8% 91.4%;*/
+
+        /*--ring: 222.2 84% 4.9%;*/
+
+        /*--chart-1: 12 76% 61%;*/
+
+        /*--chart-2: 173 58% 39%;*/
+
+        /*--chart-3: 197 37% 24%;*/
+
+        /*--chart-4: 43 74% 66%;*/
+
+        /*--chart-5: 27 87% 67%;*/
+
+        --radius: 0.5rem
+
+    }
+  .dark {
+
+        /*--background: 222.2 84% 4.9%;*/
+
+        /*--foreground: 210 40% 98%;*/
+
+        /*--card: 222.2 84% 4.9%;*/
+
+        /*--card-foreground: 210 40% 98%;*/
+
+        /*--popover: 222.2 84% 4.9%;*/
+
+        /*--popover-foreground: 210 40% 98%;*/
+
+        /*--primary: 210 40% 98%;*/
+
+        /*--primary-foreground: 222.2 47.4% 11.2%;*/
+
+        /*--secondary: 217.2 32.6% 17.5%;*/
+
+        /*--secondary-foreground: 210 40% 98%;*/
+
+        /*--muted: 217.2 32.6% 17.5%;*/
+
+        /*--muted-foreground: 215 20.2% 65.1%;*/
+
+        /*--accent: 217.2 32.6% 17.5%;*/
+
+        /*--accent-foreground: 210 40% 98%;*/
+
+        /*--destructive: 0 62.8% 30.6%;*/
+
+        /*--destructive-foreground: 210 40% 98%;*/
+
+        /*--border: 217.2 32.6% 17.5%;*/
+
+        /*--input: 217.2 32.6% 17.5%;*/
+
+        /*--ring: 212.7 26.8% 83.9%;*/
+
+        /*--chart-1: 220 70% 50%;*/
+
+        /*--chart-2: 160 60% 45%;*/
+
+        /*--chart-3: 30 80% 55%;*/
+
+        /*--chart-4: 280 65% 60%;*/
+
+        /*--chart-5: 340 75% 55%*/
+    }
+
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
+@layer base {
+  * {
+    @apply border-border;
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+    }
+  body {
+    @apply bg-background text-foreground;
+
+    }
+
 }
